--- a/style.css
+++ b/style.css
@@ -9,3 +9,23 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-color: var(--background);
+    background-image: url('./images/bg-mobile.svg');
+    background-repeat: no-repeat;
+    padding: 0 50px;
+}
+
+/* Header */
+.header {
+    display: flex;
+    align-items: center;
+    height: 150px;
+}
+.header__logo {
+    height: 40px;
+}
+.header__logo img {
+    height: inherit;
+}
