--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ body {
 .header {
     display: flex;
     align-items: center;
-    height: 150px;
+    height: 100px;
+    margin-bottom: 20px;
 }
 .header__logo {
-    height: 40px;
+    height: 35px;
 }
 .header__logo img {
     height: inherit;
@@ -38,7 +39,9 @@ body {
 .main {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 280px);
+    grid-template-rows: 250px 300px;
+    gap: 25px;
+    margin-bottom: 80px;
 }
 .main__image__container {
     width: 100%;
@@ -47,13 +50,18 @@ body {
     width: inherit;
 }
 
+.main__description {
+    display: grid;
+    grid-template-rows: 70px 1fr 50px;
+    gap: 20px;
+    justify-items: center;
+}
 .description__tittle {
     text-align: center;
     font-family: var(--tittle-font);
     font-size: 2.4rem;
     font-weight: 700;
     color: white;
-    margin-bottom: 25px;
 }
 .description__info {
     text-align: center;
@@ -61,4 +69,49 @@ body {
     font-size: 1.6rem;
     font-weight: 400;
     color: white;
+}
+
+.main__register {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    font-family: var(--body-font);
+    font-weight: 700;
+    font-size: 1.6rem;
+    color: var(--background);
+    background-color: white;
+    border-radius: 50px;
+    text-decoration: none;
+    box-shadow: 4px 5px 15px 1px rgba(0,0,0,0.92);
+}
+
+
+/* Footer */
+.footer {
+    width: 100%;
+    height: 100px;
+    padding: 15px;
+}
+.footer__icons-container {
+    display: flex;
+    justify-content: space-between;
+    width: 120px;
+    margin: 0 auto;
+}
+.footer__icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    color: white;
+    font-size: 1.6rem;
+    border: 1px solid white;
+    border-radius: 25px;
+}
+.footer__icon:hover {
+    background-color: white;
+    border: 1px solid black;
+    color: black;
 }
